--- a/RnD-index.html
+++ b/RnD-index.html
@@ -59,14 +59,14 @@
     });
   });
 
-  // Add event listener to images to simulate checkbox click
-  var images = document.querySelectorAll('.image');
-  images.forEach(function(image) {
-    image.addEventListener('click', function() {
-      var checkbox = image.nextElementSibling.querySelector('input[type="checkbox"]');
-      checkbox.click();
-    });
+// Add event listener to images to simulate checkbox click
+var images = document.querySelectorAll('.image');
+images.forEach(function(image) {
+  image.addEventListener('click', function() {
+    var checkbox = image.parentElement.nextElementSibling.querySelector('input[type="checkbox"]');
+    checkbox.click();
   });
+});
 
 </script>
 
