--- a/RnD-index.html
+++ b/RnD-index.html
@@ -6,6 +6,9 @@
     .checked {
       background-color: lightgreen;
     }
+    input[type="checkbox"] {
+      display: none;
+    }
   </style>
 </head>
 <body>
