--- a/RnD-index.html
+++ b/RnD-index.html
@@ -23,11 +23,11 @@
 <table id="imageTable">
   <tr>
     <td><img src="image1.jpg" alt="Image 1" class="image"></td>
-    <td><input type="checkbox" data-image="image1.jpg"></td>
+    <td> class="hidden"><input type="checkbox" data-image="image1.jpg"></td>
   </tr>
   <tr>
     <td><img src="Rune Factory 5/Children/Children_Erika.png" alt="Image 2" class="image"></td>
-    <td><input type="checkbox" data-image="image2.jpg"></td>
+    <td class="hidden"><input type="checkbox" data-image="image2.jpg"></td>
   </tr>
   <tr>
     <td><button id="checkAll">Check All</button></td>
