--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
     <table id="checklist">
         <tr>
-            <th>Item</th>
-            <th>Status</th>
+            <th>Hate</th>
+            <th>Love</th>
         </tr>
         <tr>
             <td><label><img src="image1.jpg" alt="Image 1"><br><input id="item1" type="checkbox"><span>Item 1</span></label></td>
