--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <th>Hate</th>
         </tr>
         <tr>
-            <td><label><img src="image1.jpg" alt="Image 1"><br><input id="item1" type="checkbox"><span>Item 1</span></label></td>
+            <td><label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Image 1"><br><input id="item1" type="checkbox"><span>Item 1</span></label></td>
         </tr>
         <tr>
-            <td><label><img src="image2.jpg" alt="Image 2"><br><input id="item2" type="checkbox"><span>Item 2</span></label></td>
+            <td><label><img src="Rune Factory 5/Villagers/Villagers_Gideon.png" alt="Image 2"><br><input id="item2" type="checkbox"><span>Item 2</span></label></td>
         </tr>
         <tr>
-            <td><label><img src="image3.jpg" alt="Image 3"><br><input id="item3" type="checkbox"><span>Item 3</span></label></td>
+            <td><label><img src="Rune Factory 5/Villagers/Villagers_Heinz.png" alt="Image 3"><br><input id="item3" type="checkbox"><span>Item 3</span></label></td>
         </tr>
     </table>
 
