--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             border-collapse: collapse;
         }
 
-        th,
-        td {
-            border: 1px solid black;
+        th {
             padding: 5px;
             text-align: center;
             vertical-align: middle;
@@ -31,27 +29,167 @@
         label {
             display: block;
         }
+        
+        button {
+            width: 100px;
+            height: 100px;
+        }
+        html {
+            transform: scale(0.75);
+            transform-origin: 0% 0%;
+        }
+
+
     </style>
 </head>
 
 <body>
-    <table id="checklist">
-        <tr>
-            <th>Hate</th>
-        </tr>
-        <tr>
-            <td><label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Image 1"><br><input id="item1" type="checkbox"><span>Item 1</span></label></td>
-        </tr>
-        <tr>
-            <td><label><img src="Rune Factory 5/Villagers/Villagers_Gideon.png" alt="Image 2"><br><input id="item2" type="checkbox"><span>Item 2</span></label></td>
-        </tr>
-        <tr>
-            <td><label><img src="Rune Factory 5/Villagers/Villagers_Heinz.png" alt="Image 3"><br><input id="item3" type="checkbox"><span>Item 3</span></label></td>
-        </tr>
-    </table>
+    <table id="checklist" border="0">
+    <tr>
+        <th colspan="6">Bachelorettes</th>
+    </tr>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Beatrice.png" alt="Bachelorettes_Beatrice"><br><input id="Bachelorettes_Beatrice.png" type="checkbox"><span>Beatrice</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Fuuka.png" alt="Bachelorettes_Fuuka"><br><input id="Bachelorettes_Fuuka.png" type="checkbox"><span>Fuuka</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Lucy.png" alt="Bachelorettes_Lucy"><br><input id="Bachelorettes_Lucy.png" type="checkbox"><span>Lucy</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Ludmila.png" alt="Bachelorettes_Ludmila"><br><input id="Bachelorettes_Ludmila.png" type="checkbox"><span>Ludmila</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Priscilla.png" alt="Bachelorettes_Priscilla"><br><input id="Bachelorettes_Priscilla.png" type="checkbox"><span>Priscilla</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Scarlett.png" alt="Bachelorettes_Scarlett"><br><input id="Bachelorettes_Scarlett.png" type="checkbox"><span>Scarlett</span></label>
+    </td>
+</tr>
+    <tr>
+        <th colspan="6">Bachelors</th>
+    </tr>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Cecil.png" alt="Cecil"><br><input id="Bachelors_Cecil.png" type="checkbox"><span>Cecil</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Lucas.png" alt="Lucas"><br><input id="Bachelors_Lucas.png" type="checkbox"><span>Lucas</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Martin.png" alt="Martin"><br><input id="Bachelors_Martin.png" type="checkbox"><span>Martin</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Murakumo.png" alt="Murakumo"><br><input id="Bachelors_Murakumo.png" type="checkbox"><span>Murakumo</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Reinhard.png" alt="Reinhard"><br><input id="Bachelors_Reinhard.png" type="checkbox"><span>Reinhard</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Ryker.png" alt="Ryker"><br><input id="Bachelors_Ryker.png" type="checkbox"><span>Ryker</span></label>
+    </td>
+</tr>
+    <tr>
+        <th colspan="2">Special</th>
+        <th colspan="4">Villagers</th>
 
-    <button onclick="checkAll()">Check All</button>
-    <button onclick="uncheckAll()">Uncheck All</button>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Darroch.png" alt="Villagers_Darroch"><br><input id="Villagers_Darroch.png" type="checkbox"><span>Darroch</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Villagers_Elsje"><br><input id="Villagers_Elsje.png" type="checkbox"><span>Elsje</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Gideon.png" alt="Villagers_Gideon"><br><input id="Villagers_Gideon.png" type="checkbox"><span>Gideon</span></label>
+    </td>
+</tr>
+    <tr>
+        <th colspan="6">Villagers (cont.)</th>
+    </tr>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Heinz.png" alt="Villagers_Heinz"><br><input id="Villagers_Heinz.png" type="checkbox"><span>Heinz</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Hina.png" alt="Villagers_Hina"><br><input id="Villagers_Hina.png" type="checkbox"><span>Hina</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Julian.png" alt="Villagers_Julian"><br><input id="Villagers_Julian.png" type="checkbox"><span>Julian</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Livia.png" alt="Villagers_Livia"><br><input id="Villagers_Livia.png" type="checkbox"><span>Livia</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Misasagi.png" alt="Villagers_Misasagi"><br><input id="Villagers_Misasagi.png" type="checkbox"><span>Misasagi</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Oswald.png" alt="Villagers_Oswald"><br><input id="Villagers_Oswald.png" type="checkbox"><span>Oswald</span></label>
+    </td>
+</tr>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Palmo.png" alt="Villagers_Palmo"><br><input id="Villagers_Palmo.png" type="checkbox"><span>Palmo</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Randolph.png" alt="Villagers_Randolph"><br><input id="Villagers_Randolph.png" type="checkbox"><span>Randolph</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Radea.png" alt="Villagers_Radea"><br><input id="Villagers_Radea.png" type="checkbox"><span>Radea</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Simone.png" alt="Villagers_Simone"><br><input id="Villagers_Simone.png" type="checkbox"><span>Simone</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Terry.png" alt="Villagers_Terry"><br><input id="Villagers_Terry.png" type="checkbox"><span>Terry</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Yuki.png" alt="Villagers_Yuki"><br><input id="Villagers_Yuki.png" type="checkbox"><span>Yuki</span></label>
+    </td>
+</tr>
+
+    <tr>
+        <th colspan="6">Children</th>
+    </tr>
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Colette.png" alt="Children_Colette"><br><input id="Children_Colette.png" type="checkbox"><span>Colette</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Conan.png" alt="Children_Conan"><br><input id="Children_Conan.png" type="checkbox"><span>Conan</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Elias.png" alt="Children_Elias"><br><input id="Children_Elias.png" type="checkbox"><span>Elias</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Erika.png" alt="Children_Erika"><br><input id="Children_Erika.png" type="checkbox"><span>Erika</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Iris.png" alt="Children_Iris"><br><input id="Children_Iris.png" type="checkbox"><span>Iris</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Children/Children_Ivan.png" alt="Children_Ivan"><br><input id="Children_Ivan.png" type="checkbox"><span>Ivan</span></label>
+    </td>
+</tr>
+<tr height="100px">
+<td>    <div class="button-container">
+        <button onclick="checkAll()">Check All</button>
+</td>
+<td>
+        <button onclick="uncheckAll()">Uncheck All</button>
+    </div>
+    <td colspan="4"></td>
+    </tr>
+
+    </table>
 
     <script>
         const checkboxes = document.querySelectorAll('input[type="checkbox"]');
