hope this helps

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            overflow: hidden; /* Hide the scrollbar if it's not needed */
         }
 
         th {
