Rearranged the table

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
     </tr>
 <tr>
     <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Reinhard.png" alt="Reinhard"><br><input id="Bachelors_Reinhard.png" type="checkbox"><span>Reinhard</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Murakumo.png" alt="Murakumo"><br><input id="Bachelors_Murakumo.png" type="checkbox"><span>Murakumo</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Cecil.png" alt="Cecil"><br><input id="Bachelors_Cecil.png" type="checkbox"><span>Cecil</span></label>
     </td>
     <td>
@@ -83,33 +89,8 @@
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Martin.png" alt="Martin"><br><input id="Bachelors_Martin.png" type="checkbox"><span>Martin</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Bachelors/Bachelors_Murakumo.png" alt="Murakumo"><br><input id="Bachelors_Murakumo.png" type="checkbox"><span>Murakumo</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Bachelors/Bachelors_Reinhard.png" alt="Reinhard"><br><input id="Bachelors_Reinhard.png" type="checkbox"><span>Reinhard</span></label>
-    </td>
-    <td>
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Ryker.png" alt="Ryker"><br><input id="Bachelors_Ryker.png" type="checkbox"><span>Ryker</span></label>
     </td>
-</tr>
-    <tr>
-        <th colspan="2">Special</th>
-        <th colspan="4">Villagers</th>
-
-<tr>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Darroch.png" alt="Villagers_Darroch"><br><input id="Villagers_Darroch.png" type="checkbox"><span>Darroch</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Villagers_Elsje"><br><input id="Villagers_Elsje.png" type="checkbox"><span>Elsje</span></label>
-    </td>
-  
 </tr>
     <tr>
         <th colspan="6">Villagers (cont.)</th>
@@ -125,10 +106,13 @@
         <label><img src="Rune Factory 5/Villagers/Villagers_Julian.png" alt="Villagers_Julian"><br><input id="Villagers_Julian.png" type="checkbox"><span>Julian</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Randolph.png" alt="Villagers_Randolph"><br><input id="Villagers_Randolph.png" type="checkbox"><span>Randolph</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Livia.png" alt="Villagers_Livia"><br><input id="Villagers_Livia.png" type="checkbox"><span>Livia</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Misasagi.png" alt="Villagers_Misasagi"><br><input id="Villagers_Misasagi.png" type="checkbox"><span>Misasagi</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Darroch.png" alt="Villagers_Darroch"><br><input id="Villagers_Darroch.png" type="checkbox"><span>Darroch</span></label>
     </td>
    
 </tr>
@@ -137,20 +121,39 @@
         <label><img src="Rune Factory 5/Villagers/Villagers_Palmo.png" alt="Villagers_Palmo"><br><input id="Villagers_Palmo.png" type="checkbox"><span>Palmo</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Randolph.png" alt="Villagers_Randolph"><br><input id="Villagers_Randolph.png" type="checkbox"><span>Randolph</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Radea.png" alt="Villagers_Radea"><br><input id="Villagers_Radea.png" type="checkbox"><span>Radea</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Misasagi.png" alt="Villagers_Misasagi"><br><input id="Villagers_Misasagi.png" type="checkbox"><span>Misasagi</span></label>
     </td>
     <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Simone.png" alt="Villagers_Simone"><br><input id="Villagers_Simone.png" type="checkbox"><span>Simone</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Yuki.png" alt="Villagers_Yuki"><br><input id="Villagers_Yuki.png" type="checkbox"><span>Yuki</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Terry.png" alt="Villagers_Terry"><br><input id="Villagers_Terry.png" type="checkbox"><span>Terry</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Yuki.png" alt="Villagers_Yuki"><br><input id="Villagers_Yuki.png" type="checkbox"><span>Yuki</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Villagers_Elsje"><br><input id="Villagers_Elsje.png" type="checkbox"><span>Elsje</span></label>
     </td>
+</tr>
+    <tr>
+        <th colspan="4"></th>
+        <th colspan="2">Special</th>
+
+<tr>
+    <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Radea.png" alt="Villagers_Radea"><br><input id="Villagers_Radea.png" type="checkbox"><span>Radea</span></label>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
+    </td>
+  
 </tr>
 
 
