--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rune Factory 5 npc checklist</title>
+    <title>Rune Factory 5 npc Friend List</title>
     <style>
         table {
             width: 100%;
@@ -93,7 +93,7 @@
     </td>
 </tr>
     <tr>
-        <th colspan="6">Villagers (cont.)</th>
+        <th colspan="6">Villagers</th>
     </tr>
 <tr>
     <td>
@@ -137,13 +137,17 @@
     </td>
 </tr>
 <tr>
-        <th colspan="4"></th>
         <th colspan="2">Special</th>
+        <th colspan="4"></th>
     </tr>
 <tr>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Radea.png" alt="Villagers_Radea"><br><input id="Villagers_Radea.png" type="checkbox"><span>Radea</span></label>
+  <td>
+        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
     </td>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
+    </td>
+    <td></td>
     <td></td>
     <td>
         <div class="button-container">
@@ -153,12 +157,6 @@
         <div class="button-container">
             <button onclick="uncheckAll()">Uncheck All</button>
         </div>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
     </td>
 </tr>
 <tr height="100px">
