--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RF5 npc Friend List</title>
+    <title>RF5 NPC Friend List</title>
     <style>
         table {
             width: 100%;
