--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image-Checkbox Table Checklist</title>
+    <title>RF5 NPC Friend List</title>
     <style>
         table {
             width: 100%;
@@ -32,8 +32,8 @@
         }
         
         button {
-            width: 100px;
-            height: 100px;
+            width: 75px;
+            height: 75px;
         }
         html {
             transform: scale(0.77);
@@ -60,13 +60,13 @@
         <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Lucy.png" alt="Bachelorettes_Lucy"><br><input id="Bachelorettes_Lucy.png" type="checkbox"><span>Lucy</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Ludmila.png" alt="Bachelorettes_Ludmila"><br><input id="Bachelorettes_Ludmila.png" type="checkbox"><span>Ludmila</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Priscilla.png" alt="Bachelorettes_Priscilla"><br><input id="Bachelorettes_Priscilla.png" type="checkbox"><span>Priscilla</span></label>
     </td>
     <td>
         <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Scarlett.png" alt="Bachelorettes_Scarlett"><br><input id="Bachelorettes_Scarlett.png" type="checkbox"><span>Scarlett</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Bachelorettes/Bachelorettes_Ludmila.png" alt="Bachelorettes_Ludmila"><br><input id="Bachelorettes_Ludmila.png" type="checkbox"><span>Ludmila</span></label>
     </td>
 </tr>
     <tr>
@@ -83,36 +83,17 @@
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Cecil.png" alt="Cecil"><br><input id="Bachelors_Cecil.png" type="checkbox"><span>Cecil</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Bachelors/Bachelors_Lucas.png" alt="Lucas"><br><input id="Bachelors_Lucas.png" type="checkbox"><span>Lucas</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Martin.png" alt="Martin"><br><input id="Bachelors_Martin.png" type="checkbox"><span>Martin</span></label>
     </td>
     <td>
         <label><img src="Rune Factory 5/Bachelors/Bachelors_Ryker.png" alt="Ryker"><br><input id="Bachelors_Ryker.png" type="checkbox"><span>Ryker</span></label>
     </td>
-    <td>
-        <label><img src="Rune Factory 5/Bachelors/Bachelors_Lucas.png" alt="Lucas"><br><input id="Bachelors_Lucas.png" type="checkbox"><span>Lucas</span></label>
-    </td>
 </tr>
     <tr>
-        <th colspan="2">Special</th>
-        <th colspan="4">Villagers</th>
-
-<tr>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Darroch.png" alt="Villagers_Darroch"><br><input id="Villagers_Darroch.png" type="checkbox"><span>Darroch</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Villagers_Elsje"><br><input id="Villagers_Elsje.png" type="checkbox"><span>Elsje</span></label>
-    </td>
-  
-</tr>
-    <tr>
-        <th colspan="6">Villagers (cont.)</th>
+        <th colspan="6">Villagers</th>
     </tr>
 <tr>
     <td>
@@ -125,10 +106,13 @@
         <label><img src="Rune Factory 5/Villagers/Villagers_Julian.png" alt="Villagers_Julian"><br><input id="Villagers_Julian.png" type="checkbox"><span>Julian</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Randolph.png" alt="Villagers_Randolph"><br><input id="Villagers_Randolph.png" type="checkbox"><span>Randolph</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Livia.png" alt="Villagers_Livia"><br><input id="Villagers_Livia.png" type="checkbox"><span>Livia</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Misasagi.png" alt="Villagers_Misasagi"><br><input id="Villagers_Misasagi.png" type="checkbox"><span>Misasagi</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Darroch.png" alt="Villagers_Darroch"><br><input id="Villagers_Darroch.png" type="checkbox"><span>Darroch</span></label>
     </td>
    
 </tr>
@@ -137,33 +121,47 @@
         <label><img src="Rune Factory 5/Villagers/Villagers_Palmo.png" alt="Villagers_Palmo"><br><input id="Villagers_Palmo.png" type="checkbox"><span>Palmo</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Randolph.png" alt="Villagers_Randolph"><br><input id="Villagers_Randolph.png" type="checkbox"><span>Randolph</span></label>
-    </td>
-    <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Radea.png" alt="Villagers_Radea"><br><input id="Villagers_Radea.png" type="checkbox"><span>Radea</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Misasagi.png" alt="Villagers_Misasagi"><br><input id="Villagers_Misasagi.png" type="checkbox"><span>Misasagi</span></label>
     </td>
     <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Simone.png" alt="Villagers_Simone"><br><input id="Villagers_Simone.png" type="checkbox"><span>Simone</span></label>
     </td>
     <td>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Yuki.png" alt="Villagers_Yuki"><br><input id="Villagers_Yuki.png" type="checkbox"><span>Yuki</span></label>
+    </td>
+    <td>
         <label><img src="Rune Factory 5/Villagers/Villagers_Terry.png" alt="Villagers_Terry"><br><input id="Villagers_Terry.png" type="checkbox"><span>Terry</span></label>
     </td>
     <td>
-        <label><img src="Rune Factory 5/Villagers/Villagers_Yuki.png" alt="Villagers_Yuki"><br><input id="Villagers_Yuki.png" type="checkbox"><span>Yuki</span></label>
+        <label><img src="Rune Factory 5/Villagers/Villagers_Elsje.png" alt="Villagers_Elsje"><br><input id="Villagers_Elsje.png" type="checkbox"><span>Elsje</span></label>
     </td>
 </tr>
-
-
-<tr height="100px">
-<td>    <div class="button-container">
-        <button onclick="checkAll()">Check All</button>
-</td>
-<td>
-        <button onclick="uncheckAll()">Uncheck All</button>
-    </div>
-    <td colspan="4"></td>
+<tr>
+        <th colspan="2">Special</th>
+        <th colspan="4"></th>
     </tr>
-
+<tr>
+  <td>
+        <label><img src="Rune Factory 5/Special/Special_Doug.png" alt="Special_Doug"><br><input id="Special_Doug.png" type="checkbox"><span>Doug</span></label>
+    </td>
+    <td>
+        <label><img src="Rune Factory 5/Special/Special_Margaret.png" alt="Special_Margaret"><br><input id="Special_Margaret.png" type="checkbox"><span>Margaret</span></label>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        <div class="button-container">
+            <button onclick="checkAll()">Check All</button>
+        </div></td>
+    <td>
+        <div class="button-container">
+            <button onclick="uncheckAll()">Uncheck All</button>
+        </div>
+    </td>
+</tr>
+<tr height="100px">
+    <td colspan="6"></td>
+</tr>
     </table>
 
     <script>
@@ -204,7 +202,7 @@
                 localStorage.setItem(checkbox.id, 'false');
                 updateBackgroundColor(checkbox);
             });
-   }
-   </script>
+        }
+    </script>
 </body>
 </html>
